<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello_world">Hello World</string>
    <string name="app_name">Fitnessfundoo</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred? Login Me.</string>
    <string name="welcome">Welcome To Fitnessfundoo</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="facebook_app_id">1490664431233258</string>
    <string name="fb_login_protocol_scheme">fb1490664431233258</string>
    <string name="action_home">Home</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="my_profile">My Profile</string>
    <string name="create_event">Create Event</string>
    <string name="search_hint">Type Place or Event Name.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="err_msg_name">Enter full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="title_activity_chat_room_discussion">ChatRoomDiscussionActivity</string>
    <string name="action_logout">Logout</string>
    <string name="gym">gym</string>
    <string name="pool">Swimming Pool</string>
    <string name="club">Sports Club</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="tree">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>



    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Add Sports</item>
        <item>My Events</item>
        <item>All Events</item>
        <item>Events Near By</item>
        <item>Facilities By City</item>
        <item>Chat Rooms</item>
        <item>Favorite Facilities </item>
        <item>Favorite Events </item>
        <item>Send Feedback</item>
        <item>Sign Out</item>
    </string-array>


    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_sports</item>
        <item>@drawable/ic_event</item>
        <item>@drawable/ic_marker</item>
        <item>@drawable/ic_marker</item>
        <item>@drawable/ic_marker</item>
        <item>@drawable/ic_chat</item>
        <item>@drawable/ic_favourite</item>
        <item>@drawable/ic_favourite</item>
        <item>@drawable/ic_feedback</item>
        <item>@drawable/ic_sign_out</item>
    </array>


    <string-array name="select_city">
        <item>Mumbai</item>
        <item>Delhi</item>
        <item>Hyderabad</item>
        <item>Banglore</item>
        <item>Pune</item>
    </string-array>


    <string-array name="table_name">
        <item>Gym</item>
        <item>Sports Club </item>
        <item>Swimming Pool</item>
    </string-array>


    <string-array name="all_sports" xmlns:android="http://schemas.android.com/apk/res/android">
        <item android:enabled="false">Football</item>
        <item android:enabled="false">Cricket </item>
        <item android:enabled="true">Baseball</item>
    </string-array>


    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>


</resources>